# a2a-openai-agent

./: README.md
a2a_multi_agent/: README.md  pyproject.toml
a2a_multi_agent/a2a_agents/: __init__.py
a2a_multi_agent/a2a_agents/greeting_agent/: __init__.py  __main__.py  agent.py  task_manager.py
a2a_multi_agent/a2a_agents/host_agent/: __init__.py  entry.py  orchestrator.py
a2a_multi_agent/a2a_agents/tell_time_agent/: __init__.py  __main__.py  agent.py  task_manager.py
a2a_multi_agent/app/cmd/: cmd.py
a2a_single_agent/: README.md
agent_a2a_sdk/: .gitignore  README.md  pyproject.toml
agent_a2a_sdk/.claude/: settings.local.json
agent_a2a_sdk/client/: client.py
agent_a2a_sdk/my_agents/tell_time_agent/: __main__.py  agent.py
mcp_a2a_master/: README.md  pyproject.toml
mcp_a2a_master/app/cmd/: __main__.py
mcp_a2a_master/mcp/servers/filesystem_server/: filesystem_server.py
mcp_a2a_master/my_agents/content_writer/: __main__.py  agent.py  agent_executor.py  description.txt  instructions.txt
mcp_a2a_master/my_agents/host_agent/: __main__.py  agent.py  agent_executor.py  instructions.txt
mcp_a2a_master/my_agents/website_builder_simple/: __main__.py  agent.py  agent_executor.py
mcp_a2a_master/utilities/a2a/: agent_registry.json
mcp_a2a_master/utilities/mcp/: mcp_config.json
mcp_a2a_master/utilities/openai_mcp/: mcp_tool_bridge.py
