[project]
name = "version-5-a2a-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk==0.2.4",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "openai-agents>=0.6.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "uvicorn>=0.34.2",
]
